--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,66 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffffff"
+    android:orientation="vertical"
     tools:context=".View.SearchActivity">
 
-
-    <TextView
-        android:id="@+id/heading_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="30dp"
-        android:fontFamily="@font/nunito_bold"
-        android:text="Tìm Món Ăn"
-        android:textColor="#555555"
-        android:textSize="24sp" />
-
-    <EditText
-        android:id="@+id/search_field"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/heading_label"
-        android:layout_below="@+id/heading_label"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_toStartOf="@+id/search_btn"
-        android:background="@drawable/search_layout"
-        android:ems="10"
-        android:fontFamily="@font/nunito_semibold"
-        android:hint="Tìm Ở Đây"
-        android:inputType="textPersonName"
-        android:paddingBottom="10dp"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:paddingTop="10dp"
-        android:textColor="#999999"
-        android:textSize="16sp" />
-
-    <ImageButton
-        android:id="@+id/search_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/search_field"
-        android:layout_alignParentEnd="true"
-        android:layout_alignTop="@+id/search_field"
-        android:layout_marginRight="30dp"
-        android:background="@android:color/background_light"
-        app:srcCompat="@drawable/search_btn_bg" />
-
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/result_list"
+    <RelativeLayout
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/search_field"
-        android:layout_marginTop="50dp">
+        android:layout_height="50dp"
+        android:padding="10dp">
+        <TextView
+            android:id="@+id/toolbar_title"
+            style="@style/viewParent.headerText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:textStyle="bold"
+            android:text="Tìm Kiếm Món Ăn"
+            android:layout_marginTop="2.7dp"/>
 
-    </androidx.recyclerview.widget.RecyclerView>
+        <ImageView
+            android:id="@+id/backTimKiem"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="0dp"
+            android:src="@drawable/ic_arrow_back_black1_24dp" />
+    </RelativeLayout>
 
-</RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="60dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="5dp"
+        android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/TF_location"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1.01"
+            android:ems="10"
+            android:inputType="textPersonName" />
+
+        <Button
+            android:textColor="@color/white"
+            android:background="@drawable/boggocbutton"
+            android:theme="@style/foating"
+            android:id="@+id/B_search"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Search" />
+
+    </LinearLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rcvsearch"
+        android:layout_marginLeft="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+</LinearLayout>
