--- a/app/src/main/res/layout/itemfood.xml
+++ b/app/src/main/res/layout/itemfood.xml
@@ -96,5 +96,15 @@
                 android:layout_marginRight="5dp"
                 android:src="@drawable/ic_heart" />
         </RelativeLayout>
+        <TextView
+            android:id="@+id/txtPriceDiscount"
+            android:layout_width="wrap_content"
+            android:textStyle="bold"
+            android:textSize="10sp"
+            android:paddingLeft="5dp"
+            android:fontFamily="sans-serif-condensed-light"
+            android:text="Còn Hàng"
+            android:textColor="#ff0000"
+            android:layout_height="wrap_content"/>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
